feat: add getProducts API
